# Chladni-plate-sim

./: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/: Button.h  Material.h  Object.h  Particle.h  PlayButton.h  Renderer.h  ShaderUtils.h  Slider.h  Sound.h  UIShaders.h
src/: Button.cpp  Object.cpp  PlayButton.cpp  Slider.cpp  Sound.cpp  UIShaders.cpp  main.cpp
